# File-server-project

./: .gitignore  CMakeLists.txt
client/: file_client.c
received_files/: data.txt
server/: file_server.c
